@@ -55,6 +55,7 @@ version <next>
 - VC-1/WMV3/WMV9 video decoder
 - MacIntel support
 - AVISynth support
+- VMware video decoder
 
 version 0.4.9-pre1:
 
